# pounds-consulting

./: .gitignore  404.html  CLAUDE.md  CNAME  Cargo.toml  Dioxus.toml  Pounds_Consulting_Website_Content.md  README.md  dev.sh  generate-docs.sh  index.html  llms.txt  notes.md  pitch-deck-content.md  robots.txt  sitemap.xml  skills_guide.md  task_plan.md
.claude/: skills-guide.md
.claude/commands/: update-docs.md  write-article.md
.github/workflows/: deploy.yml
.zenflow/tasks/review-admin-console-codebase-fo-2b63/: plan.md  requirements.md  spec.md
assets/: main.css
docs/: codebase-summary.md
src/: main.rs
src/components/: cta_section.rs  footer.rs  header.rs  icon.rs  mod.rs  service_card.rs  theme_customizer.rs
src/content/: mod.rs  storage.rs  types.rs
src/pages/: about.rs  article_detail.rs  articles.rs  contact.rs  home.rs  mod.rs  portfolio.rs  portfolio_detail.rs  service_detail.rs  services.rs
src/pages/admin/: article_editor.rs  articles.rs  dashboard.rs  login.rs  mod.rs  settings.rs
