[package]
name = "pounds-consulting"
version = "0.1.0"
edition = "2021"
description = "Pounds Consulting Website - Technical Solutions for Growing Businesses"
authors = ["Collin Pounds <collin@poundsconsulting.net>"]

[dependencies]
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Storage", "Document", "Element", "HtmlElement", "CssStyleDeclaration"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
